Sun Jul  3 18:58:14 BST 2005  Colin Watson  <cjwatson@debian.org>

	* GNUmakefile.in (__distclean): Remove po/Makevars.template.

Sun Jul  3 18:11:56 BST 2005  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: List more language support since 2.4.2.

Sun Jul  3 17:45:18 BST 2005  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Minor clarification.

Sun Jul  3 17:41:20 BST 2005  Robert Luberda  <robert@debian.org>

	* po/pl.po: Update.

Sun Jul  3 17:39:14 BST 2005  Yuri Kozlov  <yuray@id.ru>

	* po/ru.po: Update.

Tue Jun 21 13:58:37 BST 2005  Jordi Mallach  <jordi@gnu.org>

	* po/ca.po: Update from Translation Project.
	* man/THANKS: Update e-mail address.

Mon Jun 20 14:46:22 BST 2005  Colin Watson  <cjwatson@debian.org>

	* tools/config.guess, tools/config.sub: Update to 2005-04-22.

Fri Jun 10 15:05:53 BST 2005  Colin Watson  <cjwatson@debian.org>

	* Version: 2.4.3-pre1 (for translators).

Fri Jun 10 14:53:52 BST 2005  Colin Watson  <cjwatson@debian.org>

	* man/THANKS: Add translator credits for it.po, ja.po, pt_BR.po, and
	  sv.po.

Fri Jun 10 14:36:36 BST 2005  Colin Watson  <cjwatson@debian.org>

	* po/LINGUAS: Add ro.
	* man/THANKS: Add translator credit.
	* po/fi.po, po/ro.po: Update with msgmerge.

Fri Jun 10 14:31:42 BST 2005  Eugen Hoanca  <eugenh@urban-grafx.ro>

	* po/ro.po: New from Translation Project.

Fri Jun 10 14:29:17 BST 2005  Jordi Mallach  <jordi@sindominio.net>

	* po/ca.po: Update from Translation Project.

Fri Jun 10 14:22:04 BST 2005  Colin Watson  <cjwatson@debian.org>

	* po/fi.po: New, from Lauri Nurmi via the Translation Project.
	* po/LINGUAS: Add fi.
	* man/THANKS: Add translator credit.

Mon Jun  6 02:15:07 BST 2005  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Document various changes since this file was last
	  updated.

Sun Jun  5 15:47:10 BST 2005  Jeremy C. Reed  <reed@reedmedia.net>

	* configure.in: Add support for db4. Check for db3/db_185.h before
	  db_185.h.
