@@ -9,6 +9,10 @@ Major changes since man-db 2.4.2:
 	o Avoid problems creating databases on systems with badly broken
 	  clocks set before the Unix epoch.
 
+	o Fix detection of decompression programs, so that man doesn't
+	  attempt to execute man pages when it doesn't have a corresponding
+	  decompression program.
+
 	Improvements:
 	-------------
 
